fix overflow css bug

--- a/app/assets/stylesheets/expanders/expander.scss
+++ b/app/assets/stylesheets/expanders/expander.scss
@@ -11,6 +11,7 @@
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
+  overflow: hidden;
 }
 
 .expander.show {
